# Automation-BuyMe-WebSite

./: HOME SCREEN.py  PICK screen.py  REGIS.py  Registrationscreen_test.py  SENDER.py  base_page.py  home_screen_test.py  main_test.py  pick_business_test.py  pyproject.toml  sender_and_receiver.py
allure-report/: 010d487a-7fa0-4868-8e6b-b9a583b379a9-container.json  3367c231-f399-468c-9acd-170d93e1aea8-result.json  56b61787-1eae-4a1f-b40e-2fc17313a750-result.json  89334981-df24-41b8-bfba-0a93179b9d7f-result.json  8cccac6d-0fcc-4a85-aca3-beb5c6a9859e-result.json
allure-reports/: 003b6427-45ca-4615-84a2-4d2cdd607fbc-result.json  093da009-a61b-43e2-b7f1-77dd35fe3be7-result.json  14fc29fc-a877-445b-84b6-c93033c23b1d-container.json  1541e020-4e04-4c22-be68-3096984ad7be-result.json  22ac188a-ac31-43eb-a91b-638782fc6977-result.json  2344a09e-06ba-4326-8bbd-8c5c96487b14-result.json  2a8fb2cf-efa8-45b0-9b4e-4d37045f58c6-result.json  2ce71ec3-2970-40ca-b0d4-6d389f02cde6-result.json  2ec79b56-1bde-41be-9508-687f82660050-result.json  3b55fdff-7e4f-4154-b397-d47055252d9a-container.json  3e602f4c-f768-444c-923a-5deda49e0d38-result.json  4102d55f-8151-4118-b47e-c80d986387ca-result.json  560f1b93-87ff-4cf6-b865-c4f22ce42ae0-result.json  5ed586d6-65fe-47b3-857d-a3c9d71ced7f-result.json  5fb45fbb-0b89-4b9e-9dab-a2ea4d7df677-result.json  615551cb-d142-4bfb-8168-ee6902f60be8-result.json  6e07ff04-f2b3-431a-96fc-7376746f15c4-result.json  70d4f622-29fe-4cc9-a815-fdf9c2b38b7b-result.json  739f2140-61cf-4586-a7f7-44630f7fc60e-result.json  779193a0-8d7d-4f2f-94a9-27467bab7da8-result.json  (+25 more)
